RESOLVED FIXED176068
REGRESSION (r215290): "Where From" metadata is empty when dragging an image out of Safari
https://bugs.webkit.org/show_bug.cgi?id=176068
Summary REGRESSION (r215290): "Where From" metadata is empty when dragging an image o...
Andy Estes
Reported 2017-08-29 14:45:37 PDT
REGRESSION (r215290): "Where From" metadata is empty when dragging an image out of Safari
Attachments
Patch (1.92 KB, patch)
2017-08-29 14:50 PDT, Andy Estes
no flags
Andy Estes
Comment 1 2017-08-29 14:50:18 PDT
WebKit Commit Bot
Comment 2 2017-08-29 16:32:40 PDT
Comment on attachment 319286 [details] Patch Clearing flags on attachment: 319286 Committed r221321: <http://trac.webkit.org/changeset/221321>
WebKit Commit Bot
Comment 3 2017-08-29 16:32:41 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4 2017-08-29 16:33:44 PDT
Note You need to log in before you can comment on or make changes to this bug.